# campus-playout-2026

./: .gitattributes  .gitignore  Cargo.toml  Jenkinsfile  README.md  docker.nix  flake.nix  justfile
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.sqlx/: query-1d33eba98d408ea713a62d4b528cd1c6c4e64f5ff0a821e479567f06dcef64b8.json  query-2311da1f6f25ab2a98c4ea2ba773fe3b392015eb4ff0aba07212fd4ba4895025.json  query-3ba68e9fd08f8784507f09ba61c2abd1303d098fa1ef252f8fc2e4fe4f4ee973.json  query-43578a668af82a52817c0c69aacb7b72c4669ad781a50bdb235aad25645d365b.json  query-570d72fe990c4fc07f105773c31508fbcf2a294af77a47175b4e0f675289163d.json  query-71247c3416b37e0769b97a4ffaceb529f60e783f6c6e78949f0cd6901430d4f8.json  query-afa9eb21ccab5f489fe9d8f8563baab8f5a34c7b019b10e64a890aa449267ebe.json  query-c9ad3b8c4ab4ba87a61b88a3281978cac4c02f3104f82f6392022ac4239dd53a.json  query-f0beec9539115d571123611bd50dab693c6a8c65f44be9ee94b7aca8071e2b8e.json
migrations/: 20260121145123_create_database.sql  20260124010313_add_kv.sql  20260608200819_add_track_requests.sql
scripts/: playout.liq
src/: auth.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  model.rs  playlist.rs  responses.rs  state.rs  tracks.rs
src/apis/: lastfm.rs  mod.rs  myradio.rs
src/assets/: player.js  style.css
src/liquidsoap/: mod.rs
src/liquidsoap/backend/: mod.rs  unix.rs
src/routes/: admin.rs  internal.rs  mod.rs  stats.rs  status.rs
src/templates/: admin.rs  mod.rs  partials.rs  player.rs  stats.rs
