[package]
name = "campus-playout-2026"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-html = "0.2.2"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
maud = { version = "0.27.0", features = ["axum"] }
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "migrate", "sqlite", "macros", "time"] }
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["local-offset"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
